--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Atlas
 remote_theme: pmarsceill/just-the-docs
-url:  https://github.com/robinpalat/Atlas
+url:  https://github.com/robinpalat/atlas
 plugins:
   - jekyll-feed
 
@@ -8,7 +8,3 @@ plugins:
 # Sidebar
 just_the_docs:
   search_enabled: true
-  collections:
-    notas:
-      name: "Notas"
-      permalink: /notas/
